--- a/BMML.cabal
+++ b/BMML.cabal
@@ -2,21 +2,23 @@ name:                BMML
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
-homepage:            http://github.com/githubuser/BMML#readme
+homepage:            http://github.com/DbIHbKA/BMML#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Example Author Name
-maintainer:          example@example.com
-copyright:           2010 Author Here
-category:            Web
+author:              Danila
+maintainer:          ddbihbka@gmail.com
+copyright:           2015 Danila
+category:            Math,ML
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Numeric.BMML
+                     , Numeric.BMML.Regression
   build-depends:       base >= 4.7 && < 5
+                     , hmatrix
   default-language:    Haskell2010
 
 executable BMML-exe
@@ -38,4 +40,4 @@ test-suite BMML-test
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/BMML
+  location: https://github.com/DbIHbKA/BMML
