--- a/BMML.cabal
+++ b/BMML.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Numeric.BMML
-                     , Numeric.BMML.Regression
+                     , Numeric.BMML.RVMR
   build-depends:       base >= 4.7 && < 5
                      , hmatrix
   default-language:    Haskell2010
