--- a/BMML.cabal
+++ b/BMML.cabal
@@ -29,6 +29,16 @@ executable BMML-exe
                      , BMML
   default-language:    Haskell2010
 
+executable BMML-demo-regression
+  hs-source-dirs:      demo
+  main-is:             Regression.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , mwc-random
+                     , hmatrix
+                     , BMML
+  default-language:    Haskell2010
+
 test-suite BMML-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
