--- a/BMML.cabal
+++ b/BMML.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Numeric.BMML
                      , Numeric.BMML.RVMR
+                     , Numeric.BMML.RVMC
   build-depends:       base >= 4.7 && < 5
                      , hmatrix
   default-language:    Haskell2010
@@ -36,6 +37,17 @@ executable BMML-demo-regression
   build-depends:       base
                      , mwc-random
                      , hmatrix
+                     , BMML
+  default-language:    Haskell2010
+
+executable BMML-demo-classifier
+  hs-source-dirs:      demo
+  main-is:             Classifier.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , hmatrix
+                     , Frames
+                     , pipes
                      , BMML
   default-language:    Haskell2010
 
